fix the stats endpoint
